Movie controller and routes partial.
