# src/entity/Actor.ts
@@ -1,4 +1,5 @@
-import {Entity, PrimaryGeneratedColumn, Column, Unique} from "typeorm";
+import {Entity, PrimaryGeneratedColumn, Column, Unique, ManyToMany, JoinTable} from "typeorm";
+import {Movie} from "./Movie";
 
 @Entity()
 @Unique(['name'])
@@ -9,4 +10,8 @@ export class Actor{
 
     @Column({type: 'varchar', length: 320})
     name: string;
+
+    @ManyToMany(() => Movie, (mov) => mov.actors)
+    @JoinTable()
+    movies: Movie[];
 }
